# cls-rs

./: .gitignore  Cargo.toml  Makefile.toml  Readme.md
src/: lib.rs  utils.rs
src/colorset/: color.rs  color_segments.rs  colorset_name.rs  common.rs  mod.rs  name.rs  web_utils.rs
src/colorset/color_segments/color_segment/: color.rs  color_name.rs  mod.rs
tests/: mod.rs
tests/colorset_test/: color_test.rs  mod.rs  name_test.rs  testset.cls
