[package]
name = "cls-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs ={version="0.8"}
serde = {version = "1", features=["derive"]}
bincode={version = "1"}
serde_bytes = "0.11"
nom = "7"
bytes = "1"
zerocopy = "0.6"
bytemuck = "1.12"